cmake_minimum_required(VERSION 3.23)
project(Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp
        Beginner/01_Sorting/boj_18870.cpp
        Beginner/01_Sorting/boj_2108.cpp
        Beginner/01_Sorting/boj_24060.cpp
        Beginner/01_Sorting/BubbleSort.cpp
        Beginner/01_Sorting/CountSort.cpp
        Beginner/01_Sorting/Insertion_Shell_Sort.cpp
        Beginner/01_Sorting/MergeSort.cpp
        Beginner/01_Sorting/QuickSort.cpp
        Beginner/01_Sorting/SelectionSort.cpp
        Beginner/02_Greedy/BigNumber.cpp
        Beginner/02_Greedy/boj_13305.cpp
        Beginner/02_Greedy/boj_1931.cpp
        Beginner/02_Greedy/CardGame.cpp
        Beginner/02_Greedy/Exchange.cpp
        Beginner/02_Greedy/UntilNumberOne.cpp
        Beginner/03_BinarySearch/binSearch.cpp
        Beginner/03_BinarySearch/boj_1654.cpp
        Beginner/03_BinarySearch/boj_2110.cpp
        Beginner/03_BinarySearch/boj_2110_c.cpp
        Beginner/03_BinarySearch/boj_2805.cpp
        Beginner/03_BinarySearch/cuttingRiceCake.cpp
        Beginner/03_BinarySearch/findPart.cpp
        Beginner/03_BinarySearch/Lower_and_Upper_bound.cpp
        Beginner/05_ShortestPath/boj_13549.cpp
        Beginner/05_ShortestPath/boj_1753.cpp
        Beginner/05_ShortestPath/boj_1916.cpp
        main.cpp Beginner/05_ShortestPath/telegram.cpp)
