cmake_minimum_required(VERSION 3.23)
project(Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp
        boj/Beginner/01_Sorting/boj_18870.cpp
        boj/Beginner/01_Sorting/boj_2108.cpp
        boj/Beginner/01_Sorting/boj_24060.cpp
        boj/Beginner/01_Sorting/BubbleSort.cpp
        boj/Beginner/01_Sorting/CountSort.cpp
        boj/Beginner/01_Sorting/Insertion_Shell_Sort.cpp
        boj/Beginner/01_Sorting/MergeSort.cpp
        boj/Beginner/01_Sorting/QuickSort.cpp
        boj/Beginner/01_Sorting/SelectionSort.cpp
        boj/Beginner/02_Greedy/BigNumber.cpp
        boj/Beginner/02_Greedy/boj_13305.cpp
        boj/Beginner/02_Greedy/boj_1931.cpp
        boj/Beginner/02_Greedy/CardGame.cpp
        boj/Beginner/02_Greedy/Exchange.cpp
        boj/Beginner/02_Greedy/UntilNumberOne.cpp
        boj/Beginner/03_BinarySearch/binSearch.cpp
        boj/Beginner/03_BinarySearch/boj_1654.cpp
        boj/Beginner/03_BinarySearch/boj_2110.cpp
        boj/Beginner/03_BinarySearch/boj_2110_c.cpp
        boj/Beginner/03_BinarySearch/boj_2805.cpp
        boj/Beginner/03_BinarySearch/cuttingRiceCake.cpp
        boj/Beginner/03_BinarySearch/findPart.cpp
        boj/Beginner/03_BinarySearch/Lower_and_Upper_bound.cpp
        boj/Beginner/05_ShortestPath/boj_13549.cpp
        boj/Beginner/05_ShortestPath/boj_1753.cpp
        boj/Beginner/05_ShortestPath/boj_1916.cpp
        main.cpp
        boj/Beginner/05_ShortestPath/telegram.cpp
        boj/Beginner/05_ShortestPath/floyd_warshall.cpp
        boj/Beginner/04_GraphSearch/boj_24445.cpp
        boj/Beginner/04_GraphSearch/maze_escape.cpp
        boj/Intermediate/boj_1655.cpp
        boj/Beginner/04_GraphSearch/boj_24479.cpp
        boj/Beginner/07_Tree/boj_11725.cpp
        boj/Beginner/07_Tree/boj_9934.cpp
        boj/Intermediate/boj_1956.cpp
        boj/Intermediate/boj_1167.cpp
        boj/Beginner/Others/boj_2504.cpp
        boj/Beginner/08_DivideAndConquer/boj_1992.cpp
        boj/Beginner/Others/boj_1018.cpp
        boj/Beginner/Others/boj_2740.cpp
        boj/Beginner/Others/boj_3273.cpp
        boj/Beginner/Others/boj_2470.cpp
        boj/Intermediate/boj_10830.cpp
        boj/Intermediate/boj_10986.cpp
        boj/Intermediate/boj_10830_with_dp.cpp
        boj/Beginner/08_DivideAndConquer/boj_1629_with_dp.cpp
        boj/Beginner/08_DivideAndConquer/boj_1629.cpp
        boj/Beginner/Others/boj_1004.cpp
        boj/Beginner/04_GraphSearch/boj_7562.cpp
        boj/Beginner/04_GraphSearch/boj_7576.cpp
        boj/Beginner/04_GraphSearch/boj_7569.cpp
        boj/Beginner/04_GraphSearch/boj_16928.cpp
        boj/Beginner/05_ShortestPath/boj_1504.cpp
        boj/Intermediate/boj_9370.cpp
        boj/Beginner/Others/boj_2477.cpp
        boj/Beginner/09_DP/boj_9184.cpp
        boj/Beginner/Others/boj_9613.cpp
        boj/Beginner/Others/boj_1850.cpp
        Programmers/kakao_internship2022/kakao2022_Internship_ex1.cpp
        Programmers/kakao_internship2022/kakao2022_Internship_ex2.cpp
        Programmers/kakao_internship2022/kakao2022_Internship_ex3.cpp
        Programmers/kakao_blind/blind2022_ex1.cpp
        Programmers/devMatching2021/Backend_ex1.cpp
        Programmers/kakao_blind/blind2021_ex1.cpp
        Programmers/kakao_blind/blind2018_ex1.cpp
        boj/Beginner/10_BackTracking/boj_9663.cpp
        boj/Beginner/10_BackTracking/boj_14888.cpp
        boj/Beginner/10_BackTracking/boj_14889.cpp
        boj/Beginner/10_BackTracking/boj_2580.cpp
        boj/Intermediate/boj_11437.cpp boj/Intermediate/boj_11438.cpp boj/Intermediate/boj_2042.cpp boj/Beginner/09_DP/boj_11726.cpp boj/Beginner/09_DP/boj_2133.cpp boj/Beginner/09_DP/boj_14852.cpp boj/Beginner/09_DP/boj_2293.cpp boj/Beginner/09_DP/boj_2294.cpp)
